--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/socket.io": "^2.1.2",
+    "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
