--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "socket.io": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/node": "^12.7.1",
-    "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "nodemon": "^1.19.1"
   }
 }
